--- a/etchasketch_jp.html
+++ b/etchasketch_jp.html
@@ -16,7 +16,7 @@
             <div class="header-links">
                 <a class="a-header prevent-select" href="./index_jp.html">ホーム</a>
                 <a class="a-header prevent-select" href="./about_jp.html">ストーリー</a>
-                <a class="a-header prevent-select" href="./index_jp.html#img-panel">自作</a>
+                <a class="a-header prevent-select" href="./index_jp.html#img-panel">製作物</a>
                 <div class="dropbtn prevent-select" onclick="dropdownToggle()">その他<span class="material-icons inline-material-icons prevent-select">expand_more</span>
                     <div class="dropdown-content" id="myDropdown">
                         <a class="prevent-select" href="https://github.com/Swarmz/project-landing-page" target="_blank">GitHub<span class="material-icons inline-material-icons">open_in_new</span></a>
@@ -48,8 +48,8 @@
             <div class="etchasketch-container"></div>
             <div class="instructions-container">
                 <h3>説明</h3>
-                <p>マウスをプレイエリアの上に置くと、絵が描かれます。</p>
-                <p>何を描いてもいい。</p>
+                <p>マウスをプレイエリアの上に置くと、絵を描くことができます。</p>
+                <p>好きなようにお描きください。</p>
             </div>
         </div>
     </div>
