--- a/index_jp.html
+++ b/index_jp.html
@@ -16,7 +16,7 @@
             <div class="header-links">
                 <a class="a-header prevent-select" href="./index_jp.html">ホーム</a>
                 <a class="a-header prevent-select" href="./about_jp.html">ストーリー</a>
-                <a class="a-header prevent-select" href="./index_jp.html#img-panel">自作</a>
+                <a class="a-header prevent-select" href="./index_jp.html#img-panel">製作物</a>
                 <div class="dropbtn prevent-select" onclick="dropdownToggle()">その他<span class="material-icons inline-material-icons prevent-select">expand_more</span>
                     <div class="dropdown-content" id="myDropdown">
                         <a class="prevent-select" href="https://github.com/Swarmz/project-landing-page" target="_blank">GitHub <span class="material-icons inline-material-icons">open_in_new</span></a>
@@ -44,7 +44,7 @@
             <div class="quote-panel-container" id="quote-panel-container">
                 <div class="quote-panel-title"><h2>私について</h2></div>
                 <div class="quote-container">
-                    <div class="quote-left" id="quote-left"><ul class="quote-list"><li>国</li><li>歳</li><li>住</li><li>好食物</li></ul></div>
+                    <div class="quote-left" id="quote-left"><ul class="quote-list"><li>国</li><li>歳</li><li>住</li><li>好物</li></ul></div>
                     <div class="quote-center"><ul class="quote-list"><li><span class="material-icons">east</span></li><li><span class="material-icons">east</span></li><li><span class="material-icons">east</span></li><li><span class="material-icons">east</span></li></ul></div>
                     <div class="quote-right" id="quote-right"><ul class="quote-list"><li>カナダ人</li><li>30</li><li>宮城県</li><li>ラーメン</li></ul></div>
                 </div>
@@ -52,7 +52,7 @@
         </div>
         </div>
         <div id="img-panel">
-            <div class="img-panel-title"><h2>自作</h2></div>
+            <div class="img-panel-title"><h2>製作物</h2></div>
             <div class="img-panel-main">
                 <a href="etchasketch_jp.html" id="disable-mobile-link">
                     <div class="card">
@@ -63,7 +63,7 @@
                 <a href="rock-paper-scissors_jp.html">  
                     <div class="card">
                         <img src="./img/rps.jpg" alt="hands displaying rock, paper, and scissors">
-                        <div class="card-text"><p>じゃん拳</p></div>
+                        <div class="card-text"><p>じゃんけん</p></div>
                     </div>
                 </a>
                 <a href="https://phenomenalgavinsutton6511.wordpress.com/" target="_blank">  
