--- a/about_jp.html
+++ b/about_jp.html
@@ -16,7 +16,7 @@
                 <div class="header-links">
                     <a class="a-header prevent-select" href="./index_jp.html">ホーム</a>
                     <a class="a-header prevent-select" href="./about_jp.html">ストーリー</a>
-                    <a class="a-header prevent-select" href="./index_jp.html#img-panel">自作</a>
+                    <a class="a-header prevent-select" href="./index_jp.html#img-panel">製作物</a>
                     <div class="dropbtn prevent-select" onclick="dropdownToggle()">その他<span class="material-icons inline-material-icons prevent-select">expand_more</span>
                         <div class="dropdown-content" id="myDropdown">
                             <a class="prevent-select" href="./document/resume.pdf" target="_blank">履歴書<span class="material-icons inline-material-icons">file_download</span></a>
