Fix footer language selection box clickable area

--- a/about_jp.html
+++ b/about_jp.html
@@ -73,9 +73,8 @@
                 画像はfreepik.comより提供
                 <div class="language-select-box">
                     <div>Select Language</div>
-                    <div class="language-options">
-                        <a href="./about.html">English</a>
-                    </select>
+                    <div class="language-options" onclick="window.location.href='./about.html';">
+                        <a>English</a>
                     </div>
                 </div>
             </div>
