--- a/calculator.html
+++ b/calculator.html
@@ -61,8 +61,8 @@
         Images provided by freepik.com
         <div class="language-select-box">
             <div>言語を選ぶ</div>
-            <div class="language-options">
-                <a href="./etchasketch_jp.html">日本語</a>
+            <div class="language-options" onclick="window.location.href='./calculator_jp.html';">
+                <a>日本語</a>
             </div>
         </div>
     </div>
