--- a/calculator_jp.html
+++ b/calculator_jp.html
@@ -60,8 +60,8 @@
         画像はfreepik.comより提供
         <div class="language-select-box">
             <div>Select Language</div>
-            <div class="language-options">
-                <a href="./index.html">English</a>
+            <div class="language-options" onclick="window.location.href='./calculator.html';">
+                <a>English</a>
             </select>
             </div>
         </div>
