--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
     Images provided by freepik.com
     <div class="language-select-box">
         <div>言語を選ぶ</div>
-        <div class="language-options">
-            <a href="./index_jp.html">日本語</a>
+        <div class="language-options" onclick="window.location.href='./index_jp.html';">
+            <a>日本語</a>
         </div>
     </div>
 </div>
@@ -123,8 +123,8 @@
 <div class="welcome-popup" id="welcome">
     <div class="welcome-popup-content" id="welcome-box">
         <p>Welcome to my website! <br> ようこそ！</p>
-        <p>Please choose a language to continue. <br> 言語を選択して続けます。</p>
-        <div class="language-selector-container">
+        <p>Please choose a language to continue. <br> 言語を選択してください。</p>
+        <div class="language-selector-container" >
             <a class="selector-box" onclick="closeAndStart()">English</a>
             <a class="selector-box" href="./index_jp.html">日本語</a>
         </div>
