--- a/rock-paper-scissors_jp.html
+++ b/rock-paper-scissors_jp.html
@@ -59,8 +59,8 @@
     画像はfreepik.comより提供
     <div class="language-select-box">
         <div>Select Language</div>
-        <div class="language-options">
-            <a href="./rock-paper-scissors.html">English</a>
+        <div class="language-options" onclick="window.location.href='./rock-paper-scissors.html';">
+            <a>English</a>
         </select>
         </div>
     </div>
