--- a/etchasketch_jp.html
+++ b/etchasketch_jp.html
@@ -59,8 +59,8 @@
         画像はfreepik.comより提供
         <div class="language-select-box">
             <div>Select Language</div>
-            <div class="language-options">
-                <a href="./etchasketch.html">English</a>
+            <div class="language-options" onclick="window.location.href='./etchasketch.html';">
+                <a>English</a>
             </select>
             </div>
         </div>
