--- a/index_jp.html
+++ b/index_jp.html
@@ -105,8 +105,8 @@
     画像はfreepik.comより提供
     <div class="language-select-box">
         <div>Select Language</div>
-        <div class="language-options">
-            <a href="./index.html">English</a>
+        <div class="language-options" onclick="window.location.href='./index.html';">
+            <a>English</a>
         </select>
         </div>
     </div>
