Fix win/loss text result typo

--- a/rock-paper-scissors_jp.html
+++ b/rock-paper-scissors_jp.html
@@ -180,10 +180,10 @@
     function winner() {
         if (playerWins > computerWins) {
             document.getElementById("results").textContent =  playerWins +
-                " 対 " + computerWins + " に勝ちました！";
+                " 対 " + computerWins + " で勝ちました！";
         } else {
             document.getElementById("results").textContent = playerWins +
-                " 対 " + computerWins + " に負けてしまいました。";
+                " 対 " + computerWins + " で負けてしまいました。";
         }
         togglePointerEvent();
         removeOnClickFunctionality();
