Add sign up form project and links on index pages

--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
                         <div class="card-text"><p>Calculator</p></div>
                     </div>
                 </a>
+                <a href="sign-up.html">  
+                    <div class="card">
+                        <img src="./img/signup-card.jpg" alt="drawing of a sign up form">
+                        <div class="card-text"><p>Sign-up Form</p></div>
+                    </div>
+                </a>
                 <a class="out-of-service tooltip" onclick="document.getElementById('id01').style.display='block'"><span class="tooltiptext">Unavailable</span>
                     <div style="opacity:0.6;" class="card">
                         <img src="./img/under_construction.jpg" alt="blueprint saying 'under construction'">
