--- a/index_jp.html
+++ b/index_jp.html
@@ -78,6 +78,12 @@
                         <div class="card-text"><p>電卓</p></div>
                     </div>
                 </a>
+                <a href="sign-up.html">  
+                    <div class="card">
+                        <img src="./img/signup-card.jpg" alt="drawing of a sign up form">
+                        <div class="card-text"><p>Sign-up Form</p></div>
+                    </div>
+                </a>
                 <a class="out-of-service tooltip" onclick="document.getElementById('id01').style.display='block'"><span class="tooltiptext">使用禁止</span>
                     <div style="opacity:0.6;" class="card">
                         <img src="./img/under_construction.jpg" alt="">
