--- a/index_jp.html
+++ b/index_jp.html
@@ -94,7 +94,7 @@
         </div>
         <div class="sign-up-panel">
             <div class="modal">
-                <div class="modal-header"><h2>あなたのビジョンを共に実現しましょう</h2></div>
+                <div class="modal-header"><h2 style="font-size: 2rem;">あなたのビジョンを共に実現しましょう</h2></div>
                 <div class="modal-text"><p>どうぞお気軽にお問い合わせくださいませ</p></div>
                 <div class="copy-link">
                     <input type="text" id="myEmail" class="copy-link-input" value="gavinsutton6511@gmail.com" readonly>
