Restore accidental etchasketch style deletion

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <div class="background">
         <div class="header" id="index-header">
             <div class="header-links">
-                <a class="a-header prevent-select" href="./index.html">Home</a>
+                <a class="a-header prevent-select" href="/">Home</a>
                 <a class="a-header prevent-select" href="./about.html">About</a>
-                <a class="a-header prevent-select" href="./index.html#img-panel">Work</a>
+                <a class="a-header prevent-select" href="/#img-panel">Work</a>
                 <div class="dropbtn prevent-select" onclick="dropdownToggle()">More<span class="material-icons inline-material-icons prevent-select">expand_more</span>
                     <div class="dropdown-content" id="myDropdown">
                         <!-- <a class="prevent-select" href="./document/resume.pdf" target="_blank">Resumé<span class="material-icons inline-material-icons">file_download</span></a> !-->
@@ -55,13 +55,13 @@
         <div id="img-panel">
             <div class="img-panel-title"><h2>My Work</h2></div>
             <div class="img-panel-main">
-                <a href="etchasketch.html" id="disable-mobile-link">
+                <a href="etchasketch.html#etchasketch-main" id="disable-mobile-link">
                     <div class="card">
                         <img src="./img/img-panel-pen.jpg" alt="">
                         <div class="card-text"><p>Etch-A-Sketch</p></div>
                     </div>
                 </a>
-                <a href="rock-paper-scissors.html">  
+                <a href="rock-paper-scissors.html#rps-main">  
                     <div class="card">
                         <img src="./img/rps.jpg" alt="hands displaying rock, paper, and scissors">
                         <div class="card-text"><p>Rock Paper Scissors</p></div>
