--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -14,9 +14,9 @@
     <div class="hero">
         <div class="header">
             <div class="header-links">
-                <a class="a-header prevent-select" href="./index.html">Home</a>
+                <a class="a-header prevent-select" href="/">Home</a>
                 <a class="a-header prevent-select" href="./about.html">About</a>
-                <a class="a-header prevent-select" href="./index.html#img-panel">Work</a>
+                <a class="a-header prevent-select" href="/#img-panel">Work</a>
                 <div class="dropbtn prevent-select" onclick="dropdownToggle()">More<span class="material-icons inline-material-icons prevent-select">expand_more</span>
                     <div class="dropdown-content" id="myDropdown">
                         <!-- <a class="prevent-select" href="./document/resume.pdf" target="_blank">Resumé<span class="material-icons inline-material-icons">file_download</span></a> -->
@@ -28,7 +28,7 @@
         </div>
     </div>
     <div class="body-container">
-        <div class="rps-main">
+        <div class="rps-main" id="rps-main">
             <h1 class="rps-title">Rock Paper Scissors</h1>
             <div class="rps-container">
                 <div id="computer-selection">
