--- a/etchasketch.html
+++ b/etchasketch.html
@@ -14,9 +14,9 @@
     <div class="hero">
         <div class="header">
             <div class="header-links">
-                <a class="a-header prevent-select" href="./index.html">Home</a>
+                <a class="a-header prevent-select" href="/">Home</a>
                 <a class="a-header prevent-select" href="./about.html">About</a>
-                <a class="a-header prevent-select" href="./index.html#img-panel">Work</a>
+                <a class="a-header prevent-select" href="/#img-panel">Work</a>
                 <div class="dropbtn prevent-select" onclick="dropdownToggle()">More<span class="material-icons inline-material-icons prevent-select">expand_more</span>
                     <div class="dropdown-content" id="myDropdown">
                         <!-- <a class="prevent-select" href="./document/resume.pdf" target="_blank">Resumé<span class="material-icons inline-material-icons">file_download</span></a> -->
@@ -28,7 +28,7 @@
         </div>
     </div>
     <div class="body-container">
-    <div class="etchasketch-main">
+    <div class="etchasketch-main" id="etchasketch-main">
         <div class="main-title">
             <h1>Etch-a-Sketch</h1>
         </div>
