Improve links to center project on page load

--- a/etchasketch_jp.html
+++ b/etchasketch_jp.html
@@ -27,7 +27,7 @@
         </div>
     </div>
     <div class="body-container">
-    <div class="etchasketch-main">
+    <div class="etchasketch-main" id="etchasketch-main">
         <div class="main-title">
             <h1>描く</h1>
         </div>
@@ -43,7 +43,7 @@
                     <label for="color-picker">色選択</label>
                     <input type="color" id="color-picker" name="color-picker" value="#000000">
                 </div>
-                <button type="button" class="erase-button" id="erase">すべて消去</button>
+                <button type="button" class="erase-button" id="erase">すべて<br>消去</button>
             </div>
             <div class="etchasketch-container"></div>
             <div class="instructions-container">
