--- a/rock-paper-scissors_jp.html
+++ b/rock-paper-scissors_jp.html
@@ -27,7 +27,7 @@
         </div>
     </div>
     <div class="body-container">
-        <div class="rps-main">
+        <div class="rps-main" id="rps-main">
             <h1 class="rps-title">じゃんけん</h1>
             <div class="rps-container">
                 <div id="computer-selection">
