--- a/index_jp.html
+++ b/index_jp.html
@@ -54,13 +54,13 @@
         <div id="img-panel">
             <div class="img-panel-title"><h2>製作物</h2></div>
             <div class="img-panel-main">
-                <a href="etchasketch_jp.html" id="disable-mobile-link">
+                <a href="etchasketch_jp.html#etchasketch-main" id="disable-mobile-link">
                     <div class="card">
                         <img src="./img/img-panel-pen.jpg" alt="">
                         <div class="card-text"><p>描く</p></div>
                     </div>
                 </a>
-                <a href="rock-paper-scissors_jp.html">  
+                <a href="rock-paper-scissors_jp.html#rps-main">  
                     <div class="card">
                         <img src="./img/rps.jpg" alt="hands displaying rock, paper, and scissors">
                         <div class="card-text"><p>じゃんけん</p></div>
@@ -111,7 +111,7 @@
     画像はfreepik.comより提供
     <div class="language-select-box">
         <div>Select Language</div>
-        <div class="language-options" onclick="window.location.href='./index.html';">
+        <div class="language-options" onclick="window.location.href='/';">
             <a>English</a>
         </select>
         </div>
