--- a/calculator.html
+++ b/calculator.html
@@ -9,6 +9,7 @@
     <script src="index.js" defer></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <div class="background">
@@ -25,6 +26,18 @@
                         <a class="prevent-select" href="https://www.theodinproject.com/about" target="_blank">The Odin Project <span class="material-icons inline-material-icons">open_in_new</span></a>
                     </div>
                 </div>
+            </div>
+        </div>
+        <!--Mobile Header-->
+        <div class="mobile-header">
+            <div class="dropbtn prevent-select" onclick="openNav()"><span id="hamburger" class="material-symbols-outlined prevent-select">menu</span></div>
+            <div id="mySidepanel" class="sidepanel">
+                <a href="javascript:void(0)" class="prevent-select closebtn" onclick="closeNav()">&times;</a>
+                <a class="prevent-select" href="/">Home</a>
+                <a class="prevent-select" href="./about.html">About</a>
+                <a class="prevent-select" href="/#img-panel" onclick="closeNav()">Work</a>
+                <a class="prevent-select" href="https://github.com/Swarmz/project-landing-page" target="_blank">My GitHub <span class="material-icons inline-material-icons">open_in_new</span></a>
+                <a class="prevent-select" href="https://www.theodinproject.com/about" target="_blank">The Odin Project <span class="material-icons inline-material-icons">open_in_new</span></a>
             </div>
         </div>
     </div>
