Fix link scroll to element

--- a/calculator.html
+++ b/calculator.html
@@ -18,7 +18,7 @@
             <div class="header-links">
                 <a class="a-header prevent-select" href="/">Home</a>
                 <a class="a-header prevent-select" href="./about.html">About</a>
-                <a class="a-header prevent-select" href="/#img-panel">Work</a>
+                <a class="a-header prevent-select" href="./index.html#img-panel">Work</a>
                 <div class="dropbtn prevent-select" onclick="dropdownToggle()">More<span class="material-icons inline-material-icons prevent-select">expand_more</span>
                     <div class="dropdown-content" id="myDropdown">
                         <!-- <a class="prevent-select" href="./document/resume.pdf" target="_blank">Resumé<span class="material-icons inline-material-icons">file_download</span></a> -->
@@ -35,7 +35,7 @@
                 <a href="javascript:void(0)" class="prevent-select closebtn" onclick="closeNav()">&times;</a>
                 <a class="prevent-select" href="/">Home</a>
                 <a class="prevent-select" href="./about.html">About</a>
-                <a class="prevent-select" href="/#img-panel" onclick="closeNav()">Work</a>
+                <a class="prevent-select" href="./index.html#img-panel" onclick="closeNav()">Work</a>
                 <a class="prevent-select" href="https://github.com/Swarmz/project-landing-page" target="_blank">My GitHub <span class="material-icons inline-material-icons">open_in_new</span></a>
                 <a class="prevent-select" href="https://www.theodinproject.com/about" target="_blank">The Odin Project <span class="material-icons inline-material-icons">open_in_new</span></a>
             </div>
